Fix: style to center images could potentially distort images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,6 @@ body {
   background-image: url("../pictures/starfield.jpg");
   /* in case background can not be loaded, set a background color */
   background-color: black;
-  /* overflow-x: hidden;  */
 }
 
 .mylink {
@@ -90,6 +89,7 @@ header h2 {
   margin-left: 25%;
   margin-right: 25%;
   width: 50%;
+  height:auto;
 }
 
 /* split1, split2, left-column, and right-column are used to split the screen horisontally into two columns. To make it easier to maintain responsiveness and the main content more visible */
@@ -100,7 +100,7 @@ header h2 {
   position: fixed;
   z-index: 1;
   top: 50px;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .split2 {
@@ -109,6 +109,7 @@ header h2 {
   position: fixed;
   z-index: 1;
   top: 50px;
+  overflow: auto;
   /* overflow-x: hidden; */
 }
 
@@ -122,6 +123,7 @@ header h2 {
 }
 
 .main {
+  /* mey be removed */
   color: wheat;
   position: relative;
   margin-left: 200px;
@@ -214,11 +216,6 @@ td {
   text-align: center;
   text-decoration: underline;
   font-size: xx-large;
-}
-
-#main-div {
-  /*centers the main div that encommpasses the whole page */
-  width: 100%;
 }
 
 fieldset {
